estilos xpath y xquery

--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -206,7 +206,7 @@ No devuelve nada porque `<autor>` no es hijo de `<biblioteca>`.
 /biblioteca/libro/autor/@fechaNacimiento
 ```
 
-```plaintext
+```xpath
  fechaNacimiento="28/03/1936"
  fechaNacimiento="28/03/1936"
 ```
@@ -252,7 +252,7 @@ No devuelve nada porque `<libro>` no es descendiente de `<autor>`.
 //@año
 ```
 
-```plaintext
+```xpath
  año="1973"
  año="1973"
  año="1969"
@@ -420,7 +420,7 @@ Para hacer referencia al propio valor del elemento seleccionado se utiliza el pu
 //@año[.>1970]
 ```
 
-```plaintext
+```xpath
  año="1973"
  año="1973"
 ```
@@ -521,7 +521,7 @@ La selección de nodos se escribe a continuación del eje y el predicado. Si el 
 //autor/node()
 ```
 
-```plaintext
+```xpath
 Milan Kundera
 Mario Vargas Llosa
 Mario Vargas Llosa
@@ -559,7 +559,7 @@ Mario Vargas Llosa
 //autor/text()
 ```
 
-```plaintext
+```xpath
 Milan Kundera
 Mario Vargas Llosa
 Mario Vargas Llosa
@@ -575,7 +575,7 @@ No devuelve nada porque `<libro>` no contiene texto.
 //libro//text()
 ```
 
-```plaintext
+```xpath
 La vida está en otra parte
 Milan Kundera
 Pantaleón y las visitadoras
@@ -656,7 +656,7 @@ No devuelve nada porque `<autor>` sólo contiene texto.
 //@*
 ```
 
-```plaintext
+```xpath
 año="1973"
 fechaNacimiento="28/03/1936"
 año="1973"
@@ -674,7 +674,7 @@ No devuelve nada porque `<libro>` no tiene atributos.
 //autor/@*
 ```
 
-```plaintext
+```xpath
  fechaNacimiento="28/03/1936"
  fechaNacimiento="28/03/1936"
 ```
@@ -814,7 +814,7 @@ Obtener primero el año en que se publicó la novela "La vida está en otra part
 //libro[titulo="La vida está en otra parte"]/fechaPublicacion/@año
 ```
 
-```plaintext
+```xpath
 año="1973"
 ```
 
@@ -859,7 +859,7 @@ Obtener primero el autor de la novela "Pantaleón y las visitadoras":
 //libro[titulo="Pantaleón y las visitadoras"]/autor/text()
 ```
 
-```plaintext
+```xpath
 Mario Vargas Llosa
 ```
 
