--- a/_posts/2024-01-24-xquery.md
+++ b/_posts/2024-01-24-xquery.md
@@ -1,14 +1,15 @@
 ---
-title: "¿ Qué es XQuery?"
+title: "¿Qué es XQuery?"
 date: 2024-01-24 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, desarrollo de aplicaciones web, dam, daw, asir, lmsgi, xml, teoría]
-img_path: /assets/img/xpath/
+img_path: /assets/img/xquery/
 ---
 
 > Artículo en construcción.
 {:.prompt-warning}
 
+{:.section}
 ## Introducción
 
 XQuery, también conocido como XML Query, es un lenguaje creado para buscar y extraer elementos y atributos de documentos XML. La mejor forma de entender este lenguaje es diciendo que XQuery es paraXML lo que SQL es para las bases de datos. XQuery es un lenguaje de consulta diseñado para escribir consultas sobre colecciones de datos expresadas en XML. Abarca desde archivos XML hasta bases de datos relacionales con funciones de conversión de registros a XML.
@@ -50,10 +51,12 @@ Para todos los ejemplos siguiente vamos a tomar como referencia el siguiente d
 </bib>
 ```
 
+{:.section}
 ## Herramientas para el manejo de consultas XQuery
 
 Para probar XQuery podemos utilizar el software libre [BaseX](http://basex.org/).
 
+{:.section}
 ## Consultas FLWOR
 
 Las consultas XQuery se componen de cinco cláusulas, que debido a sus iniciales se las conoce como FLWOR. Definimos cada una de ellas:
@@ -68,11 +71,12 @@ Aunque también se añade a éstas la siguiente cláusula:
 
 - `GROUP BY`: Permite agrupar por nodos similares.
 
-### Cláusula `for` y `return`
+{:.subsection}
+### Cláusula for y return
 
 Con la cláusula `for` recuperaremos una serie de nodos mediante una consulta XPath y los introduciremos en una variable para poder utilizarla en la cláusula `return`. Hay que señalar que la cláusula `return` se ejecutará una vez por cada nodo que devuelva la cláusula `for`.
 
-```xml
+```xpath
 for $book in /bib/book
 return $book/title
 ```
@@ -87,14 +91,14 @@ En este caso el nodo `title` se imprime junto con las etiquetas:
 
 Como no hemos indicado ningún documento tras `in` la consulta se lanzará contra la base de datos que tengamos abierta en nuestro programa. El resto de ejemplos del manual se realizarán de esta manera, pero si quisiéramos lanzar la consulta contra un documento XML que no es una base de datos podemos hacerlo usando `doc`:
 
-```xml
+```xpath
 for $book in doc("bib.xml")/bib/book
 return $book/title
 ```
 
 Si queremos imprimir nuestras propias etiquetas en la cláusula `return`, tendremos que encerrar la variable entre llaves `{ }`:
 
-```xml
+```xpath
 for $book in /bib/book
 return <titulo>{$book/title/text()}</titulo>
 ```
@@ -109,7 +113,7 @@ Obteniendo como resultado:
 
 Podemos utilizar `at` dentro de la cláusula `for` para obtener una variable con la numeración de los nodos que se van a recorrer:
 
-```xml
+```xpath
 for $book at $i in /bib/book
 return <titulo>({$i}) {$book/title/text()}</titulo>
 ```
@@ -124,7 +128,7 @@ Lo hemos utilizado para incluirlo dentro de la etiqueta `titulo`:
 
 Si quisiéramos englobar todas las etiquetas anteriores en una superior, tendríamos que encerrar la consulta completa entre llaves `{ }` como vemos en este ejemplo:
 
-```xml
+```xpath
 <biblioteca> 
 {
   for $book in /bib/book
@@ -145,7 +149,7 @@ Obteniendo la salida:
 
 También podemos utilizar la estructura condicional `if` dentro de la cláusula `return` para modificar el resultado en función de alguna condición:
 
-```xml
+```xpath
 for $book in /bib/book
 return
   <book>
@@ -174,11 +178,12 @@ Obteniendo la salida:
 </book>
 ```
 
+{:.subsection}
 ### Cláusula let
 
 La cláusula `let` nos va a permitir crear variables con cierto contenido. La diferencia con `for` es que ésta sólo se ejecutaría una sola vez con la cláusula `return`. La cláusula `let` asigna las variables mediante los caracteres `:=`. Si el ejemplo anterior lo realizáramos con `let`:
 
-```xml
+```xpath
 let $books := /bib/book
 return <titulo>{$books/title}</titulo>
 ```
@@ -195,7 +200,7 @@ Podemos observar como la etiqueta `titulo` sólo aparece una vez, es decir, no s
 
 La clausula `let` nos va a permitir utilizar funciones de agrupación, como calcular la media, la suma, contar, etc. Estas son las mismas funciones que las que se utilizan en el lenguaje XPath y que podéis repasar [aquí](https://www.ticarte.com/contenido/que-es-el-lenguaje-xpath#funciones). Podemos por ejemplo buscar el año más alto que exista mediante la función `max` para ver el último libro que se ha escrito:
 
-```xml
+```xpath
 let $books := /bib/book
 return <last_year>{max($books/year)}</last_year>
 ```
@@ -208,7 +213,7 @@ Y la salida sería:
 
 También podemos crear varias variables seguidas con coma, por ejemplo para buscar el libro más antiguo y más nuevo:
 
-```xml
+```xpath
 let $older := min(/bib/book/year), $younger := max(/bib/book/year)
 return
 &nbsp; <books>
@@ -228,7 +233,7 @@ Y la salida sería:
 
 La cláusula `let` también nos permite asignar el valor de una variable a partir de otro consulta:
 
-```xml
+```xpath
 let $titles := (
 &nbsp; for $book in /bib/book
 &nbsp; return $book/title)
@@ -243,11 +248,12 @@ Y la salida sería:
 <title>Data on the Web</title>
 ```
 
+{:.subsection}
 ### Cláusula for y let
 
 Podemos combinar las cláusulas `for` y `let`. De esta manera conseguimos que la clasula `let` se ejecute una vez por cada nodo, al igual que hace la clausula `return`. Por ejemplo, si queremos contar el número de autores que tiene cada libro podemos utilizar la siguiente consulta:
 
-```xml
+```xpath
 for $book in /bib/book
 let $autores := count($book/author)
 return 
@@ -276,7 +282,7 @@ Lo que conseguimos es que para cada nodo que pasa por la cláusula `for` utilice
 
 Aunque este mismo caso también lo podríamos realizar sin utilizar la clásula `let`:
 
-```xml
+```xpath
 for $book in /bib/book
 return 
   <libro>
@@ -285,11 +291,12 @@ return
   </libro>
 ```
 
+{:.subsection}
 ### Cláusula where
 
 Con la cláusula `where` podemos filtrar los nodos que se seleccionan en la cláusula `for`, para ello también podemos utilizar los mismos operadores y funciones que en el leguaje XPath y que podéis repasar [aquí](https://www.ticarte.com/contenido/que-es-el-lenguaje-xpath#funciones). MUY IMPORTANTE, la cláusula `where` NO filtraría los nodos si los estamos obteniendo con `let`. Por ejemplo podemos buscar los títulos de un determinado autor:
 
-```xml
+```xpath
 for $book in /bib/book
 where $book/author = "Stevens"
 return $book/title
@@ -304,14 +311,14 @@ Y el resultado sería:
 
 La misma consulta anterior se podría realizar de igual manera filtrando los nodos en la consulta XPath sin tener que utilizar la cláusula `where`:
 
-```xml
+```xpath
 for $book in /bib/book[author = "Stevens"]
 return $book/title
 ```
 
 Un ejemplo más con la cláusula `where` utilizando una función:
 
-```xml
+```xpath
 for $book in /bib/book
 where starts-with($book/author, "S")
 return $book/title
@@ -319,17 +326,18 @@ return $book/title
 
 Otro ejemplo más con la cláusula `where` en la que se unen varias condiciones:
 
-```xml
+```xpath
 for $book in /bib/book
 where starts-with($book/author, "S") or starts-with($book/author, "T")
 return $book/title
 ```
 
+{:.subsection}
 ### Cláusula order by
 
 Con la cláusula `order by` podemos ordenar los nodos antes de que empiece a ejecutarse la cláusula `return`, ya que como sabemos, la salida será la misma que el orden que tengan los nodos en el documento o base de datos XML.
 
-```xml
+```xpath
 for $book in /bib/book
 order by $book/title
 return $book/title
@@ -345,7 +353,7 @@ Obteniendo la salida:
 
 Podemos ordenar por diferentes campos separándolos por coma.
 
-```xml
+```xpath
 for $book in /bib/book
 order by $book/title, $book/year
 return $book/title
@@ -353,17 +361,18 @@ return $book/title
 
 Podemos ordenar de manera descendente (_descending_), ya que por defecto se ordena de manera ascendente (_ascending_).
 
-```xml
+```xpath
 for $book in /bib/book
 order by $book/title descending
 return $book/title
 ```
 
+{:.subsection}
 ### Cláusula group by
 
 Con la cláusula `group by` podemos agrupar los nodos en función de un valor de nodo o de atributo:
 
-```xml
+```xpath
 for $book in /bib/book
 group by $publisher := $book/publisher
 return <group dept="{$publisher}" count="{count($book)}"/>
@@ -376,18 +385,19 @@ Obteniendo la salida:
 <group dept="" count="1"/>
 ```
 
+{:.subsection}
 ### Otros ejemplos de funciones y operadores
 
 La función `distinct-values` nos permite dentro de la cláusula `for` o `let` seleccionar sólo los nodos que tengan valores diferentes. Pero hay que tener en cuenta que los devuelve sin sus etiquetas, como si usáramos `/text()`:
 
-```xml
+```xpath
 for $autor in distinct-values(/bib/book/author)
 where $autor
 ```
 
 El operador `except` nos permite eliminar nodos de la salida de la consulta, pero para ello es obligatorio utilizar `/\*` en el nodo donde vayamos a utilizarlo como vemos en el ejemplo. En este caso también se devuelve el libro sin etiquetas, de ahí que le hayamos incluido nosotros nuestras propias etiquetas en el `return`:
 
-```xml
+```xpath
 for $book in /bib/book
 return <libro>{$book/* except $book/year except $book/author}</libro>
 ```
