--- a/_posts/2024-01-21-xsd.md
+++ b/_posts/2024-01-21-xsd.md
@@ -11,6 +11,8 @@ img_path: /assets/img/xsd/
 
 XSD (XML Schema Definition) es un lenguaje, también llamado simplemente XML Schema, que sirve para definir la estructura de un documento XML, permitiendo su validación.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/O28ZrZTCAA4?si=4ottoUefaAhQTY52" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 {:.section}
 ## Validación de un documento XML con XSD
 
@@ -220,10 +222,15 @@ Mira este vídeo donde se explican los espacios de nombres y para qué sirven y 
 > ¡OJO! A la hora de etiquetar elementos que están dentro de un espacio de nombres en un XML es IMPRESCINDIBLE tener en cuenta si el atributo `elementFormDefault` es `qualified` o `unqualified` y saber diferenciar entre elementos globales y locales.
 {:.prompt-info}
 
+Si sigues sin tenerlo claro, puedes ver los siguientes dos vídeos:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2Hw-4QDySiA?si=Oxj46SnJ5-KsqEJK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YGFcD3-WO6c?si=Yf2I_Y1Cz72l1q32" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
-
 
 {:.subsection}
 ### Elementos globales y locales en XSD
@@ -388,6 +395,8 @@ Sus definiciones pueden ser:
 <xs:element name="edad" type="xs:integer"/>
 ```
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XzqlYkDo-iY?si=L0kRK4LxcsYvV4id" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 {:.subsection}
 ### Tipos de declaración de elementos simples (fixed, default)
 
@@ -402,6 +411,9 @@ También, se puede especificar un valor por defecto (`default`), por ejemplo, te
 ```xml
 <xs:element name="mes" type="xs:string" default="agosto"/>
 ```
+
+{:.question}
+¿Se puede usar el tipo `fixed` y `default` al mismo tiempo sobre el mismo elemento?
 
 {:.section}
 ## Atributos
@@ -715,6 +727,8 @@ Un elemento es complejo (`complexType`) cuando contiene uno o más elementos y/o
 
 - Un elemento complejo puede estar vacío, es decir, no contener elementos ni texto, pero sí tener al menos un atributo.
 - Un elemento complejo puede contener contenido mixto, es decir, contener uno o más elementos, además de texto. Por otra parte, podría tener atributos, o no.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/74BMdAtXHmI?si=cAL093p-9AOiqkZ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 {:.subsection}
 ### Elemento vacío
