wip. Arreglo problemas enunciado.

--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -151,7 +151,7 @@ Dado el documento XML `a08_precios.xml`{: .filepath} escribir el contenido del a
 {:.activity}
 ### Tipo de vehículo
 
-Dada la definición de `a09_vehiculo.xsd.txt`{: .filepath} escribe otro modo de definir el elemento "vehiculo" y un `xs:simleType` llamado `tipoDeVehiculo` que restringiese a "barco", "bicicleta", "coche" y "tren" como los únicos valores aceptables para el vehículo, de forma que dicho tipo pudiera ser también utilizado por otros elementos.
+Dada la definición de `a09_vehiculo.xsd.txt`{: .filepath} escribe otro modo de definir el elemento "vehiculo" y un `xs:simleType` llamado `tipoDeVehiculo` que restringiese a "barca", "bicicleta", "coche" y "tren" como los únicos valores aceptables para el vehículo, de forma que dicho tipo pudiera ser también utilizado por otros elementos.
 
 {:.activity}
 ### Iniciales de personas famosas
@@ -191,19 +191,19 @@ Escribir el contenido del archivo `a13_numerosYLetras.xsd`{: .filepath} que perm
 
 En las expresiones regulares se pueden utilizar –entre otros– los siguientes símbolos:
 
-| Símbolos          | Significado                                                |
-|-------------------|------------------------------------------------------------|
-| `.`                 | Cualquier carácter.                                        |
-| `\d`                | Cualquier dígito del `0` al `9`.                               |
-| `\D`                | Cualquier carácter que no sea un dígito del `0` al `9`.        |
-| `x*`                | `x` puede aparecer cero o más veces.                         |
-| `x+`                | `x` debe aparecer al menos una vez.                          |
-| `x?`                | `x` puede aparecer una vez o no aparecer.                    |
+| Símbolos              | Significado                                                      |
+| --------------------- | ---------------------------------------------------------------- |
+| `.`                   | Cualquier carácter.                                              |
+| `\d`                  | Cualquier dígito del `0` al `9`.                                 |
+| `\D`                  | Cualquier carácter que no sea un dígito del `0` al `9`.          |
+| `x*`                  | `x` puede aparecer cero o más veces.                             |
+| `x+`                  | `x` debe aparecer al menos una vez.                              |
+| `x?`                  | `x` puede aparecer una vez o no aparecer.                        |
 | `[abc]` o `[a\|b\|c]` | Cualquier carácter indicado entre los corchetes: `a`, `b` o `c`. |
-| `[a-z]`             | Cualquier carácter de la a `a` la `z`.                         |
-| `x{n}`              | `x` debe aparecer `n` veces.                                   |
-| `x{n,m}`            | `x` debe aparecer entre `n` y `m` veces.                         |
-| `x{n,}`             | `x` debe aparecer al menos `n` veces.                          |
+| `[a-z]`               | Cualquier carácter de la a `a` la `z`.                           |
+| `x{n}`                | `x` debe aparecer `n` veces.                                     |
+| `x{n,m}`              | `x` debe aparecer entre `n` y `m` veces.                         |
+| `x{n,}`               | `x` debe aparecer al menos `n` veces.                            |
 
 Teniendo en cuenta, solamente, los símbolos mostrados en la tabla anterior, escribir en `a14_expresionesRegulares.txt`{: .filepath} las posibles expresiones regulares que permitan representar los siguientes valores:
 
@@ -314,7 +314,7 @@ Utilizando los elementos "nombre", "ciudad" y "edad", escribir el código de un 
 Se ha escrito el documento XML `a24_panelVuelos.xml`{: .filepath} para representar la siguiente información ficticia:
 
 | Código | Diario | Origen   | Destino | Hora salida | Hora llegada | Estado |
-|--------|--------|----------|---------|-------------|--------------|--------|
+| ------ | ------ | -------- | ------- | ----------- | ------------ | ------ |
 | V22    | SI     | New York | Chicago | 9:35        | 11:35        | R      |
 | V23    | NO     | New York | Miami   | 10:15       | 11:15        | C      |
 
@@ -336,18 +336,18 @@ Se ha escrito el documento XML `a25_factura.xml`{: .filepath} para representar l
 FACTURA NÚMERO 27 – FECHA: 18/12/2013:
 
 | DATOS EMISOR:       | DATOS CLIENTE:      |
-|---------------------|---------------------|
+| ------------------- | ------------------- |
 | Librería García     | Biblioteca Txantrea |
 | CIF: 44555666B      | CIF: 33111222A      |
 | Teléfono: 777888999 | Teléfono: 333999444 |
 
 Detalle de la factura:
 
-| CÓDIGO-ARTÍCULO | TIPO  | DESCRIPCIÓN       | CANTIDAD | OFERTA | PVP |
-|-----------------|-------|-------------------|----------|--------|-----|
-| AW7             | Libro | Analítica Web 2.0 | 1        | SI     | 35€ |
-| CP5             | Varios   | Curso de HTML     | 2        | NO     | 40€ |
-| IMPORTE:        |       |                   |          |        | 95€ |
+| CÓDIGO-ARTÍCULO | TIPO   | DESCRIPCIÓN       | CANTIDAD | OFERTA | PVP |
+| --------------- | ------ | ----------------- | -------- | ------ | --- |
+| AW7             | Libro  | Analítica Web 2.0 | 1        | SI     | 35€ |
+| CP5             | Varios | Curso de HTML     | 2        | NO     | 40€ |
+| IMPORTE:        |        |                   |          |        | 95€ |
 
 Escribir el código del archivo `a25_factura.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
 
@@ -376,16 +376,16 @@ REGISTRO DE CONEXIONES DE USUARIOS Y EMPLEADOS DE UNA EMPRESA
 
 USUARIOS:
 
-| IDENTIFICADOR NOMBRE APELLIDOS EMAIL    | CONEXIONES (FECHA HORA TIEMPO)                                         |
-|-----------------------------------------|------------------------------------------------------------------------|
+| IDENTIFICADOR NOMBRE APELLIDOS EMAIL      | CONEXIONES (FECHA HORA TIEMPO)                                           |
+| ----------------------------------------- | ------------------------------------------------------------------------ |
 | `U123&Ana&Sanz Tapia&asanz@jmail.com`     | `2014-02-23&19:15:40&122 2014-02-23&20:30:22&617 2014-02-24&11:18:31&25` |
 | `U96&Pedro&Ruiz Hierro&pruiz@jotmail.com` | `2014-02-25&20:33:55&390`                                                |
 
 EMPLEADOS:
 
 | IDENTIFICADOR NOMBRE APELLIDOS EMAIL DEPARTAMENTO | CONEXIONES (FECHA HORA TIEMPO) |
-|---------------------------------------------------|--------------------------------|
-| `E4&Marta&Vera Gil&mvera@yajoo.es&Marketing`        | `(Ninguna)`                      |
+| ------------------------------------------------- | ------------------------------ |
+| `E4&Marta&Vera Gil&mvera@yajoo.es&Marketing`      | `(Ninguna)`                    |
 
 Escribir el código del archivo `a26_registroConexiones.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que:
 
