--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -135,7 +135,7 @@ Dado el documento XML `a06_fichas.xml`{: .filepath} escribir el contenido del ar
 {:.activity}
 ### Edad entre 0 y 130 años
 
-Dado el documento XML `a07_edad.xml`{: .filepath} escribir el contenido del archivo `a07_edad.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que se debe definir la "edad" con la restricción de que el valor que tome no pueda ser menor que 0 ni mayor que 130. Además, en vez de `xs:minInclusive` y `xs:maxInclusive`, se debe utilizar:
+Dado el documento XML `a07_edad.xml`{: .filepath} escribir el contenido del archivo `a07_edad.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que se debe definir la `edad` con la restricción de que el valor que tome no pueda ser menor que 0 ni mayor que 130. Además, en vez de `xs:minInclusive` y `xs:maxInclusive`, se debe utilizar:
 
 - `xs:minExclusive` que sirve para especificar que el valor debe ser mayor que el indicado.
 - `xs:maxExclusive` que sirve para especificar que el valor debe ser menor que el indicado.
@@ -143,7 +143,7 @@ Dado el documento XML `a07_edad.xml`{: .filepath} escribir el contenido del arch
 {:.activity}
 ### Precios de tres dígitos
 
-Dado el documento XML `a08_precios.xml`{: .filepath} escribir el contenido del archivo `a08_precios.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que el elemento "precio" puede tomar por valor un número que contenga tres dígitos como máximo y, de ellos, solamente dos pueden ser decimales. Para ello, escribir una restricción que no podrá ser utilizada por otros elementos y, por otra parte, haga uso de:
+Dado el documento XML `a08_precios.xml`{: .filepath} escribir el contenido del archivo `a08_precios.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que el elemento `precio` puede tomar por valor un número que contenga tres dígitos como máximo y, de ellos, solamente dos pueden ser decimales. Para ello, escribir una restricción que no podrá ser utilizada por otros elementos y, por otra parte, haga uso de:
 
 - `xs:totalDigits` que sirve para especificar el número máximo de dígitos que puede tener un número, incluyendo a los decimales.
 - `xs:fractionDigits` que sirve para especificar el número máximo de decimales que puede tener un número.
@@ -151,7 +151,7 @@ Dado el documento XML `a08_precios.xml`{: .filepath} escribir el contenido del a
 {:.activity}
 ### Tipo de vehículo
 
-Dada la definición de `a09_vehiculo.xsd.txt`{: .filepath} escribe otro modo de definir el elemento "vehiculo" y un `xs:simleType` llamado `tipoDeVehiculo` que restringiese a "barca", "bicicleta", "coche" y "tren" como los únicos valores aceptables para el vehículo, de forma que dicho tipo pudiera ser también utilizado por otros elementos.
+Dada la definición de `a09_vehiculo.xsd.txt`{: .filepath} escribe otro modo de definir el elemento `vehiculo` y un `xs:simleType` llamado `tipoDeVehiculo` que restringiese a "barca", "bicicleta", "coche" y "tren" como los únicos valores aceptables para el vehículo, de forma que dicho tipo pudiera ser también utilizado por otros elementos.
 
 {:.activity}
 ### Iniciales de personas famosas
@@ -172,7 +172,7 @@ Si se quisiera permitir que las tres letras de iniciales e `inicialesAlReves`, s
 {:.activity}
 ### Respuestas admitidas
 
-En `a12_respuestasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado "respuesta" con la restricción de que el único valor aceptable es una de las siguientes letras: "A", "B", "C" o "D". Escribe otra forma de especificar la misma restricción.
+En `a12_respuestasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado `respuesta` con la restricción de que el único valor aceptable es una de las siguientes letras: "A", "B", "C" o "D". Escribe otra forma de especificar la misma restricción.
 
 {:.question}
 Sin hacer uso de `xs:pattern`, ¿de qué otro modo podríamos especificar lo mismo que lo expresado con `<xs:pattern value="[ABCD]"/>`?
@@ -221,22 +221,22 @@ Dado el documento XML `a14_expresionesRegulares.xml`{: .filepath} escribir el co
 {:.activity}
 ### Letras admitidas
 
-En `a15_letrasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado "letras" con la restricción de que puede tomar por valor cero o más (*) letras minúsculas de la "a" a la "z":
+En `a15_letrasAdmitidas.xsd.txt`{: .filepath} se define un elemento llamado `letras` con la restricción de que puede tomar por valor cero o más (*) letras minúsculas de la "a" a la "z":
 
 > Los paréntesis de la expresión regular se pueden omitir, escribiendo simplemente: `[a-z]*`
 {:.prompt-info}
 
-Realizar los cambios necesarios en el código del ejemplo anterior para que "letras" pueda tomar por valor uno o más pares (+) de letras, y cada par de letras deberá estar formado por una letra mayúscula seguida de otra minúscula. Por ejemplo, "HoLa" sería admitido, pero no lo sería "Hola", "HOLa", "hola", etc.
+Realizar los cambios necesarios en el código del ejemplo anterior para que `letras` pueda tomar por valor uno o más pares (+) de letras, y cada par de letras deberá estar formado por una letra mayúscula seguida de otra minúscula. Por ejemplo, "HoLa" sería admitido, pero no lo sería "Hola", "HOLa", "hola", etc.
 
 {:.activity}
 ### Longitud fija de una clave
 
-En `a16_longintudFija.xsd.txt`{: .filepath} definir un elemento "clave" que pueda tomar por valor exactamente diez caracteres, los cuales podrán ser letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". Por ejemplo, serán válidos los valores siguientes: "abcde12345", "Clave55ABC", "1A2b3c4D5f", etc.
+En `a16_longintudFija.xsd.txt`{: .filepath} definir un elemento `clave` que pueda tomar por valor exactamente diez caracteres, los cuales podrán ser letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". Por ejemplo, serán válidos los valores siguientes: "abcde12345", "Clave55ABC", "1A2b3c4D5f", etc.
 
 {:.activity}
 ### Longitud mínima y máxima de una clave
 
-Dado el documento `a17_longitudMinMax.xml`{: .filepath} escribir el contenido del archivo `a17_longitudMinMax.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que el elemento "clave" debe poder tomar por valor un mínimo de cuatro caracteres y un máximo de diez. Dichos caracteres pueden ser indistintamente letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". La restricción solamente podrá aplicarse al elemento "clave".
+Dado el documento `a17_longitudMinMax.xml`{: .filepath} escribir el contenido del archivo `a17_longitudMinMax.xsd`{: .filepath} que permita validarlo, teniendo en cuenta que el elemento `clave` debe poder tomar por valor un mínimo de cuatro caracteres y un máximo de diez. Dichos caracteres pueden ser indistintamente letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". La restricción solamente podrá aplicarse al elemento `clave`.
 
 Para ello, se debe utilizar `xs:pattern` y también:
 
@@ -246,7 +246,7 @@ Para ello, se debe utilizar `xs:pattern` y también:
 {:.activity}
 ### Información de persona ampliada
 
-Dado el archivo `a18_infoPersona.xsd`{: .filepath} añadir la definición de un nuevo elemento `complexType` llamado "infoPersonaAmpliada2" que amplíe la definición de "infoPersonaAmpliada", permitiendo validar el documento `a18_infoPersona.xml`{: .filepath}.
+Dado el archivo `a18_infoPersona.xsd`{: .filepath} añadir la definición de un nuevo elemento `complexType` llamado "infoPersonaAmpliada2" que amplíe la definición de `infoPersonaAmpliada`, permitiendo validar el documento `a18_infoPersona.xml`{: .filepath}.
 
 {:.activity}
 ### Precios de artículos
@@ -256,7 +256,7 @@ Realizar los cambios necesarios en el archivo `a19_preciosArticulos.xsd`{: .file
 {:.activity}
 ### Información de ubicaciones
 
-Añadir, al archivo `a20_infoUbicaciones.xsd`{: .filepath}, la definición de un nuevo elemento `complexType` llamado "infoUbicacion" que amplíe la definición de "direccion", permitiendo validar el documento `a20_infoUbicaciones.xml`{: .filepath}.
+Añadir, al archivo `a20_infoUbicaciones.xsd`{: .filepath}, la definición de un nuevo elemento `complexType` llamado `infoUbicacion` que amplíe la definición de `direccion`, permitiendo validar el documento `a20_infoUbicaciones.xml`{: .filepath}.
 
 {:.activity}
 ### Colores de muebles
@@ -303,7 +303,7 @@ Escribir el código de un documento XML en `a22_numerosBingo.xml`{: .filepath} q
 {:.activity}
 ### Información de personas en contenido mixto
 
-Utilizando los elementos "nombre", "ciudad" y "edad", escribir el código de un documento XML (`a23_infoPersonasMixto.xml`{: .filepath}) que pueda ser validado por `a23_infoPersonasMixto.xsd`{: .filepath} y que almacene la siguiente información:
+Utilizando los elementos `nombre`, `ciudad` y `edad`, escribir el código de un documento XML (`a23_infoPersonasMixto.xml`{: .filepath}) que pueda ser validado por `a23_infoPersonasMixto.xsd`{: .filepath} y que almacene la siguiente información:
 
 - "Eva vive en París y tiene 25 años."
 - "Giovani vive en Florencia y tiene 25 años."
