--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -563,7 +563,7 @@ Cambiar la estructura del documento
 {:.activity}
 ### XSLT y XSL-FO
 
-Transforma el documento en formato Markdown que has entregado en la [Tarea: Introducción a XPath](/posts/tarea-xpath/) realiza las siguientes acciones:
+Transforma el documento en formato Markdown que has entregado en la [Tarea: Introducción a XPath](/posts/tarea-introduccion-xpath/) realiza las siguientes acciones:
 
 1. Exporta el documento a formato HTML.
 1. Transformarlo el documento HTML a formato XSL-FO con un XSLT.
