--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -3,7 +3,7 @@ title: "Tarea: XSL"
 date: 2024-03-01 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, práctica, tarea, dam, DAM, asir]
-img_path: /assets/img/tarea-xpath/
+img_path: /assets/img/tarea-xsl/
 ---
 
 > Artículo en construcción.
@@ -566,8 +566,11 @@ Cambiar la estructura del documento
 Transforma el documento en formato Markdown que has entregado en la [Tarea: Introducción a XPath](/posts/tarea-introduccion-xpath/) realiza las siguientes acciones:
 
 1. Exporta el documento a formato HTML.
-1. Transformarlo el documento HTML a formato XSL-FO con un XSLT.
+1. Transformar el documento HTML a formato XSL-FO con un XSLT.
 1. Transforma el documento XSL-FO a PDF.
+
+![Proceso transformación de MD a PDF](procesoXSLTXSLFO.png)
+_Proceso transformación de MD a PDF_
 
 ## Bibliografía
 
