--- a/_posts/2024-02-23-markdown.md
+++ b/_posts/2024-02-23-markdown.md
@@ -1,5 +1,5 @@
 ---
-title: "Markdown"
+title: "¿Qué es Markdown?"
 date: 2024-02-23 9:00:00 +0100
 categories: [General]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, desarrollo de aplicaciones web, dam, daw, asir, lmsgi]
