--- a/_posts/2024-02-12-xslt.md
+++ b/_posts/2024-02-12-xslt.md
@@ -75,6 +75,9 @@ XSLT es un lenguaje declarativo. Por ello, las hojas de estilo XSLT no se escrib
 
 Una hoja de estilos XSL es un documento XML con extensión .xsl, en el que se define las transformaciones a realizar en el documento, mediante una serie de elementos y atributos.
 
+{:.question}
+¿Qué extensión deben tener los ficheros XSLT?
+
 Primero, se debe indicar la cabecera para indicar que es un fichero XML:
 
 ```xml
