--- a/_posts/2024-02-13-xslfo.md
+++ b/_posts/2024-02-13-xslfo.md
@@ -16,6 +16,9 @@ El objetivo de este lenguaje es parecido al de CSS, definir la forma en la que d
 ![Flujo de trabajo con XSL-FO](xslFoWorkflow.png)
 _Flujo de trabajo con XSL-FO_
 
+{:.question}
+¿Qué extensión deben tener los ficheros XSL-FO?
+
 {:.section}
 ## Estructura de un documento XSL-FO
 
