--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -6,9 +6,6 @@ tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistema
 img_path: /assets/img/tarea-xsl/
 ---
 
-> Artículo en construcción.
-{:.prompt-warning}
-
 ## Entrega y presentación
 
 La entrega será en formato ZIP. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
@@ -22,7 +19,25 @@ mruizg_t12.zip
 ├───mruizg_a02_01.xml
 ├───mruizg_a02_02.xml
 ├───mruizg_a02_03.xml
-└───mruizg_
+├───mruizg_a03_01.xml
+├───mruizg_a03_02.xml
+├───mruizg_a03_03.xml
+├───mruizg_a04_01.xml
+├───mruizg_a04_02.xml
+├───mruizg_a04_03.xml
+├───mruizg_a04_04.xml
+├───mruizg_a04_05.xml
+├───mruizg_a05_01.xml
+├───mruizg_a05_02.xml
+├───mruizg_a05_03.xml
+├───mruizg_a05_04.xml
+├───mruizg_a05_05.xml
+└───mruizg_a06/
+    ├───01_markdown.md
+    ├───02_html.html
+    ├───03_xslt.xsl
+    ├───04_xslfo.xsl
+    └───05_pdf.pdf
 ```
 
 ## Calificación
