--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -12,32 +12,62 @@ La entrega será en formato ZIP. Leer [Entrega y presentación de tareas](/posts
 
 ```plaintext
 mruizg_t12.zip
-├───mruizg_a01_01.xml
-├───mruizg_a01_02.xml
-├───mruizg_a01_03.xml
-├───mruizg_a01_04.xml
-├───mruizg_a02_01.xml
-├───mruizg_a02_02.xml
-├───mruizg_a02_03.xml
-├───mruizg_a03_01.xml
-├───mruizg_a03_02.xml
-├───mruizg_a03_03.xml
-├───mruizg_a04_01.xml
-├───mruizg_a04_02.xml
-├───mruizg_a04_03.xml
-├───mruizg_a04_04.xml
-├───mruizg_a04_05.xml
-├───mruizg_a05_01.xml
-├───mruizg_a05_02.xml
-├───mruizg_a05_03.xml
-├───mruizg_a05_04.xml
-├───mruizg_a05_05.xml
+├───mruizg_a01/
+|       ciclosFormativos1.xml
+|       01_entrada.xsl
+|       01_salida.xml
+|       02_entrada.xsl
+|       02_salida.xml
+|       03_entrada.xsl
+|       03_salida.xml
+|       04_entrada.xsl
+|       04_salida.xml
+├───mruizg_a02/
+|       ciclosFormativos2.xml
+|       01_entrada.xsl
+|       01_salida.xml
+|       02_entrada.xsl
+|       02_salida.xml
+|       03_entrada.xsl
+|       03_salida.xml
+├───mruizg_a03/
+|       ciclosFormativos3.xml
+|       01_entrada.xsl
+|       01_salida.xml
+|       02_entrada.xsl
+|       02_salida.xml
+|       03_entrada.xsl
+|       03_salida.xml
+├───mruizg_a04/
+|       museos1.xml
+|       01_entrada.xsl
+|       01_salida.xml
+|       02_entrada.xsl
+|       02_salida.xml
+|       03_entrada.xsl
+|       03_salida.xml
+|       04_entrada.xsl
+|       04_salida.xml
+|       05_entrada.xsl
+|       05_salida.xml
+├───mruizg_a05/
+|       museos2.xml
+|       01_entrada.xsl
+|       01_salida.xml
+|       02_entrada.xsl
+|       02_salida.xml
+|       03_entrada.xsl
+|       03_salida.xml
+|       04_entrada.xsl
+|       04_salida.xml
+|       05_entrada.xsl
+|       05_salida.xml
 └───mruizg_a06/
-    ├───01_markdown.md
-    ├───02_html.html
-    ├───03_xslt.xsl
-    ├───04_xslfo.xsl
-    └───05_pdf.pdf
+        01_markdown.md
+        02_html.html
+        03_xslt.xsl
+        04_xslfo.xsl
+        05_pdf.pdf
 ```
 
 ## Calificación
